<resources>
    <string name="app_name">NoteMe</string>
    <string name="new_list">New List</string>
    <string name="new_note">New Note</string>
    <string name="all">All</string>
    <string name="favourite">Favourite</string>
    <string name="my_lists">MY LISTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="list">List</string>
</resources>