<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <RelativeLayout
            android:id="@+id/new_note_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/new_note_toolbar"
                android:layout_width="match_parent"
                app:title=""
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/new_note_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/cancel"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_12ssp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>
            <Button
                android:id="@+id/new_note_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/add"
                android:enabled="false"
                android:theme="@style/Theme.NoteMe.Buttons"
                android:textSize="@dimen/_12ssp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_13ssp"
                android:text="@string/new_note"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"

            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_note_toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/dark_blue"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_note_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:text="Test"
                        android:hint="@string/title" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--<View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/primary"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteX="7dp" />-->


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    app:hintTextColor="@color/dark_blue"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="@color/dark_blue"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/new_note_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        tools:text="test"
                        android:padding="@dimen/_15sdp"
                        android:hint="@string/content"
                        android:minLines="5"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/_10sdp">
                <!-- TODO Add the list -->
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>